2008-07-30  Tor Lillqvist  <tml@novell.com>

	* gtk/gtkprintoperation-win32.c: Fix problems in handling custom
	paper sizes. The DEVMODE::dmPaperWidth and dmPaperLength are in
	tenths of a millimeter, and the RECT passed to CreateEnhMetaFile()
	is in hundredths of a millimeter. Patch by Sven Neumann.

2008-07-28  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreemodel.c: Small doc improvements.

2008-07-28  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump GLib requirement to 2.17.5 for GEmblemedIcon

	* gtk/gtkicontheme.c: Support rendering GEmblemedIcons.

2008-07-27  Sven Herzberg  <sven@imendio.com>

	Bug 544863 – gtkquartz.h not included in released 2.13.5 package

	* gtk/Makefile.am: explicitly include the moved header in EXTRA_DIST

2008-07-25  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkstatusicon.c (gtk_status_icon_class_init):
	Documented the activate and popup-menu signals as being for use 
	by applications and language bindings, though they are G_SIGNAL_ACTION, 
	as stated in bug #361561.

2008-07-24  Sebastien Bacher  <seb128@ubuntu.com>

	* modules/printbackends/cups/gtkprintbackendcups.c:
	(cups_printer_get_options): don't try free gettext() values,
	fix a printing dialog crasher (bug 544390)

2008-07-24  Cody Russell  <bratsche@gnome.org>

	Bug 544510 – SetTimer callback signatures has the wrong type

	* gdk/win32/gdkevents-win32.c: Fix modal_timer_proc() and
	sync_timer_proc() to use UINT_PTR for the 'id' parameter
	instead of 'id'.  Patch by Richard Hult.

2008-07-23  Matthias Clasen  <mclasen@redhat.com>

	Bug 543915 – "Sole completion" translation issue

	* gtk/gtkfilechooserentry.c: Add translator hints to a
	bunch of strings. Requested by Andre Klapper

2008-07-23  Matthias Clasen  <mclasen@redhat.com>

	Bug 544265 – GDK assumes XFIXES extension

	* gdk/x11/gdkcursor-x11.c (_gdk_x11_cursor_update_theme):
	Only call XFixes functions if the server has the extension.
	Reported by Ian Turner.
