@@ -1,3 +1,9 @@
+2008-07-31  Matthisa Clasen  <mclasen@redhat.com>
+
+	* gdk/gdk.[hc]:
+	* gdk/gdk.symbols: Complete the set of thread-safe timeout function
+	with second-granularity versions. Patch by Marek Kasik.
+
 2008-07-30  Tor Lillqvist  <tml@novell.com>
 
 	* gtk/gtkprintoperation-win32.c: Fix problems in handling custom
